# mlops-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.dvc/: config
.github/workflows/: pre-commit.yml  pre-commit_n_tests.yml  run.yml  test.yml
configs/: config.py  config.yaml
configs/data/: california_housing.yaml  diabetes.yaml
data/: .gitignore  diabetes_X.csv.dvc
data/raw_datasets/: california_housing_X.csv.dvc  california_housing_y.csv.dvc  diabetes_y.csv.dvc
docs/: intro.md
docs/v0.0.1/: examples.md  index.md  mlops_tools.md  modules.md
examples/: hw1_usage.ipynb  hw1_usage.py  hw2.sh
mlops_tools/: infer.py  models.py  train.py  utils.py
nvidia-triton/model_repository/onnx-catboost/: config.pbtxt
nvidia_triton/: client.py  docker-compose.yaml  report.md
nvidia_triton/model_repository/onnx_catboost/: config.pbtxt
nvidia_triton/model_repository/onnx_catboost/1/: model.onnx.dvc
