[tool.poetry]
name = "mlops-tools"
version = "0.1.0"
description = "Training project within the MLOps course"
authors = ["destitutiones <albina.rukhadze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
